--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,19 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "type": "node",
+      "name": "Launch Program",
+      "program": "${file}",
+      "request": "launch",
+      "console": "integratedTerminal",
+      "args": [
+        "<",
+        "${workspaceFolder}/res/input.txt",
+        ">",
+        "${workspaceFolder}/res/output.txt"
+      ]
+    },
+    {
       "name": "[Baekjoon] Python: Current File",
       "type": "python",
       "request": "launch",
